# generic-relationship-api

./: docker-compose.yml  pyproject.toml
backend/TagMaster/: apps.py  factories.py  models.py  serializers.py  urls.py  views.py
backend/TagMaster/management/commands/: populate_bookmarks.py  populate_bookmarks_notes_tags.py  populate_notes.py  populate_tags.py
backend/TagMaster/migrations/: 0001_initial.py  0002_bookmark_note.py
backend/accounts/: factories.py  serializers.py  tests.py  urls.py  views.py
backend/accounts/management/commands/: populate_users.py
backend/blogs/: factories.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/blogs/management/commands/: populate_blogs.py
backend/blogs/migrations/: 0001_initial.py
backend/comments/: factories.py  models.py  serializers.py
backend/comments/management/commands/: populate_comments.py
backend/comments/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/likes/: factories.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/likes/management/commands/: populate_likes.py
backend/likes/migrations/: 0001_initial.py
backend/replies/: factories.py  models.py  serialiazers.py
backend/replies/management/commands/: populate_replies.py
backend/replies/migrations/: 0001_initial.py
backend/services/: base_factory.py
